# iLive_webRTC_API

./: CMakeLists.txt  LICENSE  README.md
include/: iLive_data_channel.h  iLive_media_stream.h  iLive_peerconnection.h  iLive_video_renderer.h  iLive_webrtc_base.h
src/: iLive_data_channel.cpp  iLive_media_stream.cpp  iLive_peerconnection.cpp  iLive_video_renderer.cpp  iLive_webrtc_base.cpp  main.cpp
